Code in chroma overflow fix.

--- a/site/assets/scss/_syntax_customizations.scss
+++ b/site/assets/scss/_syntax_customizations.scss
@@ -3,7 +3,7 @@
 
 /* Background */
 
-.chroma {  }
+.chroma {    white-space: break-spaces;  }
 
 /* Other */
 
